Bugfix - Overlapping image - Roadmap

--- a/assets/scss/pages/_roadmap.scss
+++ b/assets/scss/pages/_roadmap.scss
@@ -1,4 +1,4 @@
-.roadmap{
+.roadmap:not(.header) {
 	> .container{
 		@include media('<768px'){
 			overflow: hidden;
